# scicommander

./: Cargo.toml  Makefile  README.md  audit.go  go.mod  main.go  main_test.go  todo.md
.github/workflows/: go-ci.yml  python-run-tests.yml
cmd/sci/: audit.go  main.go  main_test.go
examples/: dna.compl.rev.fa.au.html  reverse_complement.sh
go/: go.mod  go.sum  main.go
poc/: README.md  scicmd.py
poc/tests/: test_rrun.py
python/: Makefile  pyproject.toml  setup.py
python/examples/: dna.compl.rev.fa.au.html  reverse_complement.sh
python/scicommander/: __init__.py  scicmd.py  scishell.py
python/scripts/: scishell
python/tests/: test_scicmd.py
src/: main.rs
