[package]
name = "scicommander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true # 13M -> 4.8M
codegen-units = 1 # ...
panic = "abort" # 4.8M -> 4.7M
strip = true # 4.7M -> 515K

[[bin]]
name = "scicmd"
path = "src/main.rs"
