[tool.poetry]
name = "scicommander"
version = "0.3.4"
description = ""
authors = ["Samuel Lampa <samuel.lampa@scilifelab.se>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"
ipdb = "^0.13.13"
pytest = "^7.4.0"
twine = "^4.0.2"
build = "^1.0.3"
virtualenv = "^20.24.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
